// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem snapshots isLinkRouted == false 1`] = `
<Root>
  <div
    className="css-u96gbo-Root e1uo4w6s0"
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="AnchorTag"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="a"
      css={[Function]}
      href="/some/test/path"
      rel="noopener noreferrer"
      target={null}
    >
      <a
        className="css-d3pkg8-STYLES-STYLES"
        href="/some/test/path"
        rel="noopener noreferrer"
        target={null}
      >
        test label
      </a>
    </EmotionCssPropInternal>
  </div>
</Root>
`;

exports[`MenuItem snapshots isLinkRouted == true 1`] = `
<Root>
  <div
    className="css-u96gbo-Root e1uo4w6s0"
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="AnchorTag"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__={[Function]}
      css={[Function]}
      to="/some/test/path"
    >
      <a
        className="css-d3pkg8-STYLES-STYLES"
        href="/some/test/path"
        onClick={[Function]}
      >
        test label
      </a>
    </EmotionCssPropInternal>
  </div>
</Root>
`;
